# autospec-agent-aws

./: .gitignore  AutoSpec_Pitch.pptx  ChallangeReq  FurtherRequirement.md  PRESENTATION.md  README.md  UI_Requirements.md  app.py  pyproject.toml  requirements.txt  server.py
.kiro/specs/autospec-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
artifacts/20260629_202904/: alignment_verdict.json  test_report.json  test_suite.py
artifacts/20260630_092050/: spec_document.md
artifacts/20260630_092123/: generated_code.py
autospec/: __init__.py  __main__.py  demo_data.py  models.py  orchestrator.py  test_runner.py
autospec/agents/: __init__.py  build_agent.py  review_agent.py  spec_agent.py  test_agent.py
templates/: index.html
web/: app.js  index.html  styles.css
